--- a/FechadurasDigitais/app/src/main/res/layout/activity_main.xml
+++ b/FechadurasDigitais/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#e6e6e6"
     tools:context=".MainActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
@@ -24,7 +25,37 @@
             android:layout_gravity="center_horizontal"
             android:scaleX="0.6"
             android:scaleY="0.6"
-            android:src="@drawable/logo" />
-            android:contentDescription="@string/content_description_logo_pado"
+            android:src="@drawable/logo"
+            android:contentDescription="@string/content_description_logo_pado" />
     </com.google.android.material.appbar.MaterialToolbar>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/mainToolBar">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:orientation="vertical"
+            android:layout_margin="16dp"
+            android:layout_padding="16dp">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_input"
+                android:drawableEnd="@drawable/ic_search"
+                android:elevation="2dp"
+                android:hint="@string/search"
+                android:padding="16dp" />
+
+<!--            slide 52-->
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
