--- a/aula-2/fechadurasDigitais/app/src/main/res/layout/activity_fde600w.xml
+++ b/aula-2/fechadurasDigitais/app/src/main/res/layout/activity_fde600w.xml
@@ -35,7 +35,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/fde600w" />
+        app:srcCompat="@drawable/fde201_grande" />
 
     <TextView
         android:id="@+id/textView"
