--- a/ionic/hello-word/src/app/home/home.page.html
+++ b/ionic/hello-word/src/app/home/home.page.html
@@ -17,7 +17,7 @@
       <ion-card-subtitle class="text">{{myData.subtitle}}</ion-card-subtitle>
       <ion-card-title class="text title">{{myData.title}}</ion-card-title>
       <p class="text">{{myData.p}}</p>
-      <ion-button (click)='goToPage()' class="btn_mais">{{myData.button}}</ion-button>
+      <ion-button (click)='goToPage(myData.host)' class="btn_mais">{{myData.button}}</ion-button>
     </ion-card-header>
   </ion-card>
 </ion-content>
