--- a/ionic/hello-word/src/app/londrina/londrina.page.html
+++ b/ionic/hello-word/src/app/londrina/londrina.page.html
@@ -8,7 +8,7 @@
     <p class="caminho">></p> 
     <a class="caminho" href="#">Cidades</a>
     <p class="caminho">></p>
-    <a class="caminho" href="#">Lista</a>
+    <a class="caminho" (click)='goToPageHome()'>Lista</a>
     <p class="caminho">></p>
     <a class="caminho" href="#">Londrina</a>
   </div>
@@ -61,6 +61,6 @@
     </ion-accordion>
   </ion-accordion-group>
 
-  <ion-button (click)='goToPage()' class="btn_mais">VOLTAR</ion-button>
+  <ion-button (click)='goToPageHome()' class="btn_mais">VOLTAR</ion-button>
 
 </ion-content>
