--- a/ionic/hello-word/src/app/home/home.page.html
+++ b/ionic/hello-word/src/app/home/home.page.html
@@ -20,4 +20,15 @@
       <ion-button (click)='goToPage(myData.host)' class="btn_mais">{{myData.button}}</ion-button>
     </ion-card-header>
   </ion-card>
+
+  <!-- <ion-card class="cards" *ngFor="let cidade of Cidades">
+    <img class="img_cidade" src="{{cidade.imagem}}" alt="foto da cidade">
+    <ion-card-header>
+      <ion-card-subtitle class="text">{{cidade.Cidade}}</ion-card-subtitle>
+      <ion-card-title class="text title">{{cidade.Cidade}}, {{cidade.UF}}</ion-card-title>
+    </ion-card-header>
+      <ion-card-content>{{cidade.description_curta}}</ion-card-content>
+      <ion-button (click)='goToPage(cidade);' class="btn_mais">Visualizar</ion-button>
+    <br>
+  </ion-card> -->
 </ion-content>
