--- a/ionic/hello-word/src/app/londrina/londrina.page.html
+++ b/ionic/hello-word/src/app/londrina/londrina.page.html
@@ -8,7 +8,7 @@
     <p class="caminho">></p> 
     <a class="caminho" href="#">Cidades</a>
     <p class="caminho">></p>
-    <a class="caminho" (click)='goToPageHome()'>Lista</a>
+    <a class="caminho" href="#" (click)='goToPageHome()'>Lista</a>
     <p class="caminho">></p>
     <a class="caminho" href="#">Londrina</a>
   </div>
