--- a/ionic/hello-word/src/app/norte/norte.page.scss
+++ b/ionic/hello-word/src/app/norte/norte.page.scss
@@ -10,35 +10,28 @@
     height: 78px;
     margin: 1.2vw;
 }
-
-// conteudo
+  
 .caminhos {
     display: flex;
     align-items: center;
     gap: 3vw;
-    margin: 15px;
+    margin: 12px;
     font-size: 12px;
 }
   
-a {
+  a {
     text-decoration: none;
 }
   
 .caminho {
     color: #ffffff;
 }
-
+  
 .cards {
-    margin: 20px 12px;
-}
-
-.card {
-    --background: url("../../assets/regiao.png");
-    width: 100%;
-    height: 180px;
+    background-color: #ffffff;
     display: flex;
-    align-items: flex-end;
-    border-radius: 10px;
+    flex-direction: column;
+    margin: 12px;
 }
   
 .title {
@@ -51,7 +44,7 @@ a {
 }
   
 .text {
-    color: #fff;
+    color: #000000;
 }
   
 .btn_mais {
@@ -60,16 +53,4 @@ a {
     width: 100%;
     height: 5vh;
     font-size: 12px;
-}
-
-.footer {
-    background: #D9D9D9;
-    padding: 20px;
-    display: flex;
-    justify-content: space-around;
-}
-
-.footer_image {
-    width: 26px;
-    height: auto;
 }
