--- a/ionic/hello-word/src/app/regiao/regiao.page.html
+++ b/ionic/hello-word/src/app/regiao/regiao.page.html
@@ -16,8 +16,8 @@
 
 <ion-footer>
   <div class="footer">
-    <img class="footer_image" src="../../assets/home.png" alt="">
-    <img class="footer_image" src="../../assets/star.png" alt="">
-    <img class="footer_image" src="../../assets/perfil.png" alt="">
+    <img class="footer_image" src="../../assets/home.png" alt="home">
+    <img class="footer_image" src="../../assets/star.png" alt="favoritos">
+    <img (click)='goToPage("perfil")' class="footer_image" src="../../assets/perfil.png" alt="perfil">
   </div>
 </ion-footer>
