arrumando arquivos e pastas

--- a/ionic/hello-word/src/app/ajuda/ajuda.page.html
+++ b/ionic/hello-word/src/app/ajuda/ajuda.page.html
@@ -1,7 +1,7 @@
 <body id="page">
 
   <div id="cabecalho">
-    <ion-icon (click)='goToPage("perfil")' name="arrow-back-outline"></ion-icon>
+    <ion-icon class="seta_voltar" (click)='goToPage("perfil")' name="arrow-back-outline"></ion-icon>
     <p class="title">AJUDA</p>
     <ion-icon name=""></ion-icon>
   </div>
