--- a/ionic/hello-word/src/app/home/home.page.html
+++ b/ionic/hello-word/src/app/home/home.page.html
@@ -2,33 +2,22 @@
   <img class="img_logo" src="../../assets/logo.png" alt="logo padolabs">
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" color="dark">
   <div class="caminhos">
-    <a class="caminho" href="#">Home</a>
-    <p class="caminho">></p> 
-    <a class="caminho" href="#">Cidades</a>
-    <p class="caminho">></p>
-    <a class="caminho" href="#">Lista</a>
+    <p class="caminho">SELECIONE UMA REGIÃO</p>
   </div>
-
+  
   <ion-card class="cards" *ngFor="let myData of getData()">
-    <img class="img_cidade" [src]="myData.imageUrl" alt="foto da cidade">
-    <ion-card-header>
-      <ion-card-subtitle class="text">{{myData.subtitle}}</ion-card-subtitle>
+    <ion-card-header class="card" (click)='goToPage(myData.host)'>
       <ion-card-title class="text title">{{myData.title}}</ion-card-title>
-      <p class="text">{{myData.p}}</p>
-      <ion-button (click)='goToPage(myData.host)' class="btn_mais">{{myData.button}}</ion-button>
     </ion-card-header>
   </ion-card>
-
-  <!-- <ion-card class="cards" *ngFor="let cidade of Cidades">
-    <img class="img_cidade" src="{{cidade.imagem}}" alt="foto da cidade">
-    <ion-card-header>
-      <ion-card-subtitle class="text">{{cidade.Cidade}}</ion-card-subtitle>
-      <ion-card-title class="text title">{{cidade.Cidade}}, {{cidade.UF}}</ion-card-title>
-    </ion-card-header>
-      <ion-card-content>{{cidade.description_curta}}</ion-card-content>
-      <ion-button (click)='goToPage(cidade);' class="btn_mais">Visualizar</ion-button>
-    <br>
-  </ion-card> -->
 </ion-content>
+
+<ion-footer>
+  <div class="footer">
+    <ion-icon class="footer_image" (click)='goToPage("home")' name="home-outline"></ion-icon>
+    <ion-icon class="footer_image" (click)='goToPage("favorito")' name="star-outline"></ion-icon>
+    <ion-icon class="footer_image" (click)='goToPage("perfil")' name="person-outline"></ion-icon>
+  </div>
+</ion-footer>
