--- a/ionic/hello-word/src/app/home/home.page.scss
+++ b/ionic/hello-word/src/app/home/home.page.scss
@@ -28,7 +28,7 @@
 
 // mycodes
 #cabecalho {
-  background: #1f1b3f;
+  background: #19133E;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -40,11 +40,12 @@
   margin: 1.2vw;
 }
 
+// conteudo
 .caminhos {
   display: flex;
   align-items: center;
   gap: 3vw;
-  margin: 12px;
+  margin: 15px;
   font-size: 12px;
 }
 
@@ -57,10 +58,18 @@ a {
 }
 
 .cards {
-  background-color: #ffffff;
+  margin: 20px 12px;
+  border-radius: 10px;
+}
+
+.card {
+  --background: linear-gradient(rgba(0, 0, 0, 0.5),
+  rgba(0, 0, 0, 0.5)), url("../../assets/londrina.png");
+  width: 100%;
+  height: 180px;
   display: flex;
-  flex-direction: column;
-  margin: 12px;
+  align-items: flex-end;
+  border-radius: 10px;
 }
 
 .title {
@@ -73,7 +82,7 @@ a {
 }
 
 .text {
-  color: #000000;
+  color: #fff;
 }
 
 .btn_mais {
@@ -82,4 +91,15 @@ a {
   width: 100%;
   height: 5vh;
   font-size: 12px;
+}
+
+.footer {
+  background: #D9D9D9;
+  padding: 20px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.footer_image {
+  font-size: 26px;
 }
