--- a/ionic/hello-word/src/app/login/login.page.html
+++ b/ionic/hello-word/src/app/login/login.page.html
@@ -6,8 +6,8 @@
   <form>
     <input class="input_login" type="text" placeholder="LOGIN"/>
     <input class="input_login" type="password" placeholder="SENHA"/>
-    <ion-button (click)='goToPage()' class="btn_entrar">ENTRAR</ion-button>
+    <ion-button (click)='goToPage("home")' class="btn_entrar">ENTRAR</ion-button>
   </form>
 
-  <p>NÃO TEM CONTA? <a href="http://localhost:8100/registrar">REGISTRE-SE</a></p>
+  <p>NÃO TEM CONTA? <b class="registrar" (click)='goToPage("registrar")'>REGISTRE-SE</b></p>
 </ion-content>
