--- a/ionic/hello-word/src/app/login/login.page.scss
+++ b/ionic/hello-word/src/app/login/login.page.scss
@@ -31,7 +31,7 @@ form {
     padding: 15px;
     border: 1px solid rgba(255, 255, 255, 0);
     background: #2C2656;
-    color: #fff;
+    color: white;
 }
 
 .btn_entrar {
@@ -47,10 +47,10 @@ p {
     margin: 20px;
     text-align: center;
     font-size: 12px;
+    color: #fff;
 }
 
-a {
+.registrar {
     text-decoration: none;
     color: #fff;
-    font-weight: bold;
 }
