--- a/ionic/hello-word/src/app/registrar/registrar.page.html
+++ b/ionic/hello-word/src/app/registrar/registrar.page.html
@@ -9,9 +9,9 @@
     <input class="input_register" type="password" placeholder="SENHA"/>
     <input class="input_register" type="text" placeholder="UF"/>
     <input class="input_register" type="text" placeholder="CIDADE"/>
-    <ion-button (click)='goToPage()' class="btn_register">REGISTRAR</ion-button>
+    <ion-button (click)='goToPage("home")' class="btn_register">REGISTRAR</ion-button>
   </form>
   <div class="voltar">
-    <ion-button (click)='goToPage()' class="btn_voltar">VOLTAR</ion-button>
+    <ion-button (click)='goToPage("login")' class="btn_voltar">VOLTAR</ion-button>
   </div>
   </ion-content>
