--- a/ionic/hello-word/src/app/cidade/cidade.page.scss
+++ b/ionic/hello-word/src/app/cidade/cidade.page.scss
@@ -65,3 +65,14 @@ a {
     font-size: 12px;
     margin: 12px;
 }
+
+.footer {
+    background: #D9D9D9;
+    padding: 20px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.footer_image {
+    font-size: 26px;
+}
