--- a/ionic/hello-word/src/app/cidades/cidades.page.scss
+++ b/ionic/hello-word/src/app/cidades/cidades.page.scss
@@ -29,6 +29,20 @@
     flex-direction: column;
     margin: 12px;
 }
+
+.descricao {
+    padding: 10px;
+}
+
+.div_star {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.star {
+    font-size: 18px;
+}
   
 .title {
     font-weight: bold;
@@ -46,7 +60,18 @@
 .btn_mais {
     color: #ffffff;
     padding: 5px;
-    width: 100%;
+    width: auto;
     height: 5vh;
     font-size: 12px;
 }
+
+.footer {
+    background: #D9D9D9;
+    padding: 20px;
+    display: flex;
+    justify-content: space-around;
+  }
+  
+  .footer_image {
+    font-size: 26px;
+  }
