--- a/ionic/hello-word/src/app/login/login.page.scss
+++ b/ionic/hello-word/src/app/login/login.page.scss
@@ -15,7 +15,7 @@ ion-content {
     margin: 1.2vw;
 }
 
-form {
+.login {
     width: 100%;
     height: 45%;
     display: flex;
@@ -50,7 +50,7 @@ p {
     color: #fff;
 }
 
-.registrar {
+.btn_registrar {
     text-decoration: none;
     color: #fff;
 }
