--- a/ionic/hello-word/src/app/login/login.page.html
+++ b/ionic/hello-word/src/app/login/login.page.html
@@ -6,26 +6,13 @@
             alt="logo da padolabs"
         />
     </div>
-    
+
     <div class="login">
-        <ion-input class="input_login" [{ ngModel }]="email" placeholder="LOGIN"></ion-input>
-        <ion-input class="input_login" [{ ngModel }]="password" placeholder="SENHA"></ion-input>
-        <ion-button class="btn_entrar" (click)='onSubmit()'>ENTRAR</ion-button>
-    </div>
-    
-    <p>NÃO TEM CONTA? <b class="btn_registrar" (click)='goToPage()'>REGISTRE-SE</b></p>
-</ion-content>
-
-<!-- <ion-content>
-  <div class="logo">
-    <img class="img_logo" src="../../assets/logo.png" alt="logo padolabs">
+      <ion-input class="input_login" [(ngModel)]="userEmail" placeholder="LOGIN"></ion-input>
+      <ion-input class="input_login" [(ngModel)]="userPassword" type="password" placeholder="SENHA"></ion-input>
+      <ion-button class="btn_entrar" (click)='onSubmit()'>ENTRAR</ion-button>
   </div>
+  
+  <p>NÃO TEM CONTA? <b class="btn_registrar" (click)='goToPage()'>REGISTRE-SE</b></p>
 
-  <form>
-    <input class="input_login" type="text" placeholder="LOGIN"/>
-    <input class="input_login" type="password" placeholder="SENHA"/>
-    <ion-button (click)='goToPage("home")' class="btn_entrar">ENTRAR</ion-button>
-  </form>
-
-  <p>NÃO TEM CONTA? <b class="registrar" (click)='goToPage("registrar")'>REGISTRE-SE</b></p>
-</ion-content> -->
+</ion-content>
