--- a/ionic/hello-word/src/app/login/login.page.scss
+++ b/ionic/hello-word/src/app/login/login.page.scss
@@ -11,31 +11,24 @@ ion-content {
 
 .img_logo {
     width: auto;
-    height: 90px;
+    height: 10vh;
     margin: 1.2vw;
 }
 
 .login {
-    width: 100%;
-    height: 45%;
+    margin-top: 25vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     gap: 8px;
     padding: 20px;
     font-size: 12px;
 }
 
 .input_login {
-    padding: 15px;
     border: 1px solid rgba(255, 255, 255, 0);
     background: #2C2656;
-    color: white;
-}
-
-.btn_entrar {
-    height: 6vh;
+    color: #fff;
 }
 
 .btn_entrar, .input_login {
@@ -47,10 +40,5 @@ p {
     margin: 20px;
     text-align: center;
     font-size: 12px;
-    color: #fff;
-}
-
-.btn_registrar {
-    text-decoration: none;
     color: #fff;
 }
